# chirp-railway-catalog

./: .gitignore  CHANGELOG.md  README.md  catalog.json  pyproject.toml
.github/workflows/: ci.yml  compatibility.yml  template-conformance.yml
docs/: OPERATIONS.md
evidence/chirp-feedback-board/v0.1.2/: live-smoke.json  operations.json
evidence/chirp-launch-board/v0.1.3/: live-smoke.json
evidence/chirp-launch-board/v0.1.4/: live-smoke.json  operations.json
evidence/chirp-paste/v0.1.1/: live-smoke.json  operations.json
evidence/chirp-queue/v0.1.3/: live-smoke.json  operations.json
evidence/chirp-status/v0.1.2/: live-smoke.json  operations.json
evidence/chirp-waitlist/v0.1.2/: live-smoke.json  operations.json
schema/: template-manifest.schema.json
scripts/: compatibility_matrix.py
src/chirp_railway_conformance/: __init__.py  cli.py  manifest.py  runner.py
tests/: test_catalog.py  test_conformance.py
